[gd_scene load_steps=7 format=3 uid="uid://b0sb7uiujoqju"]

[ext_resource type="PackedScene" uid="uid://dcclxpivufrme" path="res://data/users/userclass.tscn" id="1_oekmf"]
[ext_resource type="Script" path="res://data/users/global/user_data.gd" id="1_vvg6l"]
[ext_resource type="Script" path="res://scenes/user_collection.gd" id="2_nmhqb"]
[ext_resource type="Script" path="res://data/users/global/set_data_control.gd" id="4_fj60g"]
[ext_resource type="Script" path="res://data/users/global/user_mouse.gd" id="5_oulpi"]
[ext_resource type="Script" path="res://data/users/global/item_procession.gd" id="6_jfh4t"]

[node name="user" type="Node"]
script = ExtResource("1_vvg6l")
all_selectable_usernames = Array[String](["ae", "fh", "ax"])

[node name="user_class" parent="." instance=ExtResource("1_oekmf")]

[node name="user_collection_and_generation" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("2_nmhqb")

[node name="set_data_control" type="Node" parent="."]
script = ExtResource("4_fj60g")

[node name="user_mouse" type="Node" parent="."]
script = ExtResource("5_oulpi")

[node name="item_procession" type="Node" parent="."]
script = ExtResource("6_jfh4t")
